--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
-	"name": "fivefilters/php-readability",
+	"name": "wallabag/php-readability",
 	"type": "library",
 	"description": "Automatic article extraction from HTML",
 	"keywords": ["article extraction","content extraction","extraction","article","content","html"],
-	"homepage": "http://code.fivefilters.org/php-readability/",
+	"homepage": "https://github.com/wallabag/php-readability",
 	"license": "Apache-2.0",
 	"authors": [
 	{
